@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0
hide empty members
title Class Diagram - UC-16 Manage User Profile

class "Auth / Profile UI" as UI <<boundary>>
class "AuthController" as Controller <<controller>>
class "UsersService" as Service <<service>>
class "User" as User <<domain>>
class "Role" as Role <<domain>>
class "JwtStrategy" as JwtStrategy <<domain>>
class "EmailService" as EmailService <<domain>>

UI --> Controller : GET/PATCH /auth/users/:id/profile
Controller --> Service : delegates
Service --> User : uses
Service --> Role : uses
Service --> JwtStrategy : uses
Service --> EmailService : uses

note right of UI
UC-16 - Manage User Profile
Actors: User
Pre: Đã đăng nhập
Post: Profile được cập nhật
end note
@enduml
